<resources>
    <string name="app_name">Meter manager</string>
    <string name="locations_title">Locations</string>
    <string name="location_edit_title">Edit location</string>
    <string name="location_new_title">New location</string>
    <string name="add_new_location">Add new location</string>
    <string name="save_new_location">Save new location</string>
    <string name="name_label">Name</string>
    <string name="new_location_name_hint">Input name</string>
    <string name="new_location_description_label">Description</string>
    <string name="new_location_description_hint">Input description</string>
    <string name="input_location_name_empty_err">Input location name</string>
    <string name="input_location_name_duplicate_err">Location name must be unique</string>
    <string name="location_delete_dialog_title">Delete</string>
    <string name="location_delete_dialog_message">Are you sure you want to delete</string>
    <string name="location_delete_dialog_positive">Yes</string>
    <string name="location_delete_dialog_negative">No</string>
    <string name="location_delete_toast">Location deleted</string>
    <string name="add_meter_hint">Add new meter</string>
    <string name="new_meter_name_hint">Input name</string>
    <string name="reading_units_label">Reading units</string>
    <string name="kv">KV</string>
    <string name="m3">m3</string>
    <string name="save_new_meter">Сохранить новый счётчик</string>
    <string name="meter_new_title">New meter</string>
    <string name="meter_edit_title">Edit meter</string>
    <string name="input_meter_name_empty_err">Input meter name</string>
    <string name="input_meter_name_duplicate_err">Meter name must be unique</string>
    <string name="input_meter_reading_err">Select reading unit</string>
    <string name="meter_added">Meter added</string>
    <string name="delete_hint">Delete</string>
    <string name="edit_hint">Edit</string>
    <string name="location_added">Location added</string>
    <string name="location_edited">Location edited</string>
    <string name="meter_delete_dialog_title">Delete</string>
    <string name="meter_delete_dialog_message">Are you sure you want to delete</string>
    <string name="meter_delete_dialog_positive">Yes</string>
    <string name="meter_delete_dialog_negative">No</string>
    <string name="meter_delete_toast">Meter deleted</string>
    <string name="last_reading">Last reading:</string>
    <string name="meter_edited">Meter edited</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="add_new_reading">Add new reading</string>
    <string name="add_reading_hint">Add reading</string>
    <string name="value_label">Value</string>
    <string name="new_reading_value_hint">Input value</string>
    <string name="date_label">Date</string>
    <string name="open_calendar">Open calendar</string>
    <string name="reading_new_title">New reading</string>
    <string name="reading_edit_title">Edit reading</string>
    <string name="save_new_reading">Save reading</string>
    <string name="reading_value_empty">Inputted value is invalid</string>
    <string name="reading_future_date">Date can\'t be from future</string>
    <string name="last_reading_less_then_new_err">New value can\'t be less than last value</string>
    <string name="reading_edited">Reading edited</string>
    <string name="reading_added">Reading added</string>
    <string name="reading_delete_dialog_message">Are you sure you want to delete this reading?</string>
    <string name="reading_delete_toast">Reading deleted</string>
    <string name="saving_data">Saving data</string>
    <string name="login_dialog_title">Saving data in the cloud</string>
    <string name="login_dialog_message">Do you want to store application data in the cloud? To do this, you need to sign in to your Google account.</string>
    <string name="login_dialog_positive">Yes</string>
    <string name="login_dialog_negative">No</string>
    <string name="btn_logout">Logout</string>
</resources>
