<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textSize="@dimen/main_font_size"
            android:textColor="@color/main_text"
            android:paddingHorizontal="@dimen/medium_padding"
            android:layout_marginHorizontal="@dimen/details_margin"/>
        <EditText
            android:id="@+id/meter_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/new_meter_name_hint"
            android:textSize="@dimen/main_font_size"
            android:textColor="@color/main_text"
            android:paddingHorizontal="@dimen/medium_padding"
            android:background="@drawable/edit_text_border"
            android:layout_marginHorizontal="@dimen/details_margin"
            android:importantForAutofill="no"
            android:inputType="text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reading_units_label"
            android:textSize="@dimen/main_font_size"
            android:textColor="@color/main_text"
            android:paddingHorizontal="@dimen/medium_padding"
            android:layout_marginHorizontal="@dimen/details_margin"
            android:layout_marginTop="20dp"/>
        <RadioGroup
            android:id="@+id/rg_reading_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin" >
            <RadioButton
                android:id="@+id/rb_kv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kv"
                android:textSize="@dimen/main_font_size"
                android:textColor="@color/main_text"/>
            <RadioButton
                android:id="@+id/rb_m3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m3"
                android:textSize="@dimen/main_font_size"
                android:textColor="@color/main_text"/>
        </RadioGroup>
    </LinearLayout>
</layout>