<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value_label"
            android:textSize="@dimen/main_font_size"
            android:textColor="@color/main_text"
            android:paddingHorizontal="@dimen/medium_padding"
            android:layout_marginHorizontal="@dimen/details_margin"/>
        <EditText
            android:id="@+id/reading_value_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/new_reading_value_hint"
            android:textSize="@dimen/main_font_size"
            android:textColor="@color/main_text"
            android:paddingHorizontal="@dimen/medium_padding"
            android:background="@drawable/edit_text_border"
            android:layout_marginHorizontal="@dimen/details_margin"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="@dimen/main_font_size"
            android:textColor="@color/main_text"
            android:paddingHorizontal="@dimen/medium_padding"
            android:layout_marginHorizontal="@dimen/details_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/reading_date_edittext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:hint="01.01.1990"
                android:textSize="@dimen/main_font_size"
                android:textColor="@color/main_text"
                android:paddingHorizontal="@dimen/medium_padding"
                android:background="@drawable/edit_text_border"
                android:layout_marginHorizontal="@dimen/details_margin"
                android:importantForAutofill="no"
                android:enabled="false"/>
            <ImageButton
                android:id="@+id/btn_reading_add_date"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/calendar_icon"
                android:background="@null"
                android:contentDescription="@string/open_calendar" />
        </LinearLayout>
        <CheckBox
            android:id="@+id/is_last_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_margin"
            android:checked="true"
            android:text="@string/is_last_reading_checkbox"/>
    </LinearLayout>
</layout>