<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_reading_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_font_size"
                android:textColor="@color/main_text_day"
                android:text="@string/date"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_font_size"
                android:textColor="@color/main_text_day"
                android:text="@string/value"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reading_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/ll_reading_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_new_reading"
            tools:listitem="@layout/reading_list_item" />
        <Button
            android:id="@+id/btn_add_new_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_reading"
            android:layout_margin="@dimen/big_padding"
            app:layout_constraintTop_toBottomOf="@id/rv_reading_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>